--- a/views/account.pug
+++ b/views/account.pug
@@ -32,6 +32,10 @@ block content
         .user-view__form-container
           h2.heading-secondary.ma-bt-md Your account settings
 
+          //- WITHOUTAPI
+          //- form.form.form-user-data(action='/submit-user-data' mehtod='POST' enchtype='multipart/form-data')
+
+          //- WITH API
           form.form.form-user-data
             .form__group
               label.form__label(for='name') Name
@@ -40,8 +44,10 @@ block content
               label.form__label(for='email') Email address
               input#email.form__input(type='email', value=`${user.email}`, required)
             .form__group.form__photo-upload
-              img.form__user-photo(src=`img/users/${user.photo}`, alt='User photo')
-              a.btn-text(href='') Choose new photo
+              img.form__user-photo(src=`/img/users/${user.photo}`, alt='User photo')
+              input.form__upload(type='file', accept='image/*', id='photo', name='photo')
+              label(for='photo') Choose new photo
+
             .form__group.right
               button.btn.btn--small.btn--green Save settings
         .line &nbsp;
