--- a/views/tour.pug
+++ b/views/tour.pug
@@ -4,7 +4,7 @@ include _reviewCard
 block append head
   link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.css' integrity='sha512-Zcn6bjR/8RZbLEpLIeOwNtzREBAJnUKESxces60Mpoj+2okopSAcSUIUOseddDm0cxnGQzxIR7vJgsLZbdLE3w==' crossorigin='anonymous' referrerpolicy='no-referrer')
   script(src='https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.js' integrity='sha512-BwHfrr4c9kmRkLw6iXFdzcdWV/PGkVgiIyIWLLlTSXzWQzxuSg4DiQUCpauz/EWjgk5TYQqX/kvn9pG1NpYfqg==' crossorigin='anonymous' referrerpolicy='no-referrer')
-  scritp(src='/css/leaflet.css' defer)
+  script(src='https://js.stripe.com/v3/')
 
 mixin overviewBox(label, text, icon)
   .overview-box__detail
@@ -87,4 +87,8 @@ block content
       .cta__content
         h2.heading-secondary What are you waiting for?
         p.cta__text= `${tour.duration} days. 1 adventure. Infinite memories. Make it yours today!`
-        button.btn.btn--green.span-all-rows Book tour now!
+        
+        if user
+         button.btn.btn--green.span-all-rows#book-tour(data-tour-id=`${tour.id}`) Book tour now!
+        else
+          a.btn.btn--green.span-all-rows(href='/login') Log in to book tour
