--- a/views/account.pug
+++ b/views/account.pug
@@ -15,7 +15,7 @@ block content
         ul.side-nav
           li.side-nav--active
             +navItem('#', 'Settings', 'settings', true)
-            +navItem('#', 'My bookings', 'briefcase')
+            +navItem('/my-tours', 'My bookings', 'briefcase')
             +navItem('#', 'My reviews', 'star')
             +navItem('#', 'Billing', 'credit-card')
 
